# VendingMachine

VendingMachine_Itemis/: .project  Statechart.sgen  vending_machine.ysc
VendingMachine_Itemis/src-gen/: Statechart.c  Statechart.h  (+1 more)
VendingMachine_NCS/: CMakeLists.txt
VendingMachine_NCS/docs/html/: dir_010a4f97648707343248ecd8646c1d45.html  dir_010a4f97648707343248ecd8646c1d45_dep.dot  dir_05c8ee3c8d3b37518563dcf5b153aeee.html  dir_05c8ee3c8d3b37518563dcf5b153aeee_dep.dot  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_5173c6cbb1ea1b31a0a61ebb2073592d.html  dir_5173c6cbb1ea1b31a0a61ebb2073592d_dep.dot  dir_bd796d98a7a7e232e5ad797db600faef.html  dir_bd796d98a7a7e232e5ad797db600faef_dep.dot  dir_d7a2a69ffa5ee2b55f170bc3e3331629.html  dir_d7a2a69ffa5ee2b55f170bc3e3331629_dep.dot  files.html  globals_func.html  main_8c.html  main_8c__incl.dot
VendingMachine_NCS/docs/html/search/: all_4.js  functions_2.js  variables_0.js
VendingMachine_NCS/src/: Doxyfile  main.c  mainLedSelectTest.c
VendingMachine_NCS/src/html/: dir_3e48d9c20554e46d2b60df5e9b8f408a.html  dir_3e48d9c20554e46d2b60df5e9b8f408a_dep.dot  dir_83fd340ff71480251c07941f3e74582d.html  dir_bbe61ca135de80609377e7d7ccf0483a.html  dir_bbe61ca135de80609377e7d7ccf0483a_dep.dot  dir_fd26ede326237a76a66d0506ed9e81f4.html  dir_fd26ede326237a76a66d0506ed9e81f4_dep.dot  files.html  globals.html  globals_defs.html  globals_vars.html  graph_legend.html  index.html  main_8c.html
VendingMachine_NCS/src/html/search/: all_0.js  all_1.js  defines_0.js  defines_2.js  defines_3.js  functions_0.js  searchdata.js
